<resources>
    <string name="app_name">GB_Calculator_2022</string>
    <string name="galyminsky_homework_3">Galyminsky HomeWork_3!</string>
    <string name="tvresult"></string>
    <string name="btn_min">-</string>
    <string name="equal">=</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="btn_dev">/</string>
    <string name="c">C</string>
    <string name="btn_plus">+</string>
    <string name="btn_multi">*</string>
    <string name="my_theme">My Theme</string>
    <string name="theme_green">Theme Green</string>
    <string name="theme_orange">Theme Orange</string>
    <string name="theme_purple">Theme Purple</string>


</resources>