<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SettingActivity">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rd_my_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rd_green_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_green" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rd_orange_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_orange" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rd_purple_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_purple" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>